feat: created ProductDTO with GetAllProductsUseCase